Fix white box under header on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -250,10 +250,10 @@ header {
     margin-top: 0;
 }
 
-.service-box {
+.my-quality-box {
     max-width: 400px;
     margin: 50px auto 0;
-    @media (min-width: 992px) {
+    @media (min-width: 200px) {
         margin: 20px auto 0;
     }
     p {
